--- a/plans.html
+++ b/plans.html
@@ -1,9 +1,15 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Nova • Plans</title><link rel="stylesheet" href="assets/css/style.css"/><script type="text/javascript" src="https://payhip.com/payhip.js"></script><script defer src="assets/js/state.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Invest in yourself</div></div>
-<div class="card"><h1 class="h1">Choose your plan</h1><div class="grid cols-4">
+<div class="card"><h1 class="h1">Invest in Yourself</h1>
+<p class="p">You’ve seen a glimpse of your purpose. Now it’s time to prioritize <strong>you</strong> — your growth, your potential, and your future. When you invest in yourself, you honor the purpose that’s been waiting inside you. Nova and Navi give you the tools to build skills, confidence, and opportunities around the calling that’s already yours.</p>
+<p class="p"><em>Choose the path that fits where you are today — and take the next step toward who you’re becoming.</em></p>
+<div class="hr"></div>
+<div class="grid cols-4">
   <div class="card"><div class="small">Resource</div><div class="h1" style="font-size:18px">How to Know Your Purpose</div><a href="https://payhip.com/b/N7Lvg" class="payhip-buy-button" data-theme="green" data-product="N7Lvg">Buy Now</a></div>
   <div class="card"><div class="small">$29.99/mo</div><div class="h1" style="font-size:18px">NAVI Starter</div><a href="https://payhip.com/b/GdfU7" class="payhip-buy-button" data-theme="green" data-product="GdfU7">Buy Now</a></div>
   <div class="card"><div class="small">$99/mo</div><div class="h1" style="font-size:18px">NAVI Pro</div><a href="https://payhip.com/b/knC1Z" class="payhip-buy-button" data-theme="green" data-product="knC1Z">Buy Now</a></div>
   <div class="card"><div class="small">$149.99/mo</div><div class="h1" style="font-size:18px">NAVI Mastery</div><a href="https://payhip.com/b/re4Hy" class="payhip-buy-button" data-theme="green" data-product="re4Hy">Buy Now</a></div>
-</div></div><div class="footer-ver">v8.8b • Unified 12-Category Edition</div></div></body></html>
+</div>
+<p class="small" style="margin-top:14px">Purpose isn’t found once — it’s grown daily. Start your growth today.</p>
+</div><div class="footer-ver">v8.8d • Refined</div></div></body></html>
