--- a/reflection.html
+++ b/reflection.html
@@ -1,44 +1,12 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Reflection</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script>
-<style>
-.help{color:var(--muted);font-size:14px;line-height:1.7}
-.note{width:100%;min-height:100px;border-radius:12px;border:1px solid var(--line);background:#0d1931;color:#fff;padding:12px}
-.moment .btn.active{border-color:var(--accent)!important;box-shadow:0 0 12px rgba(67,209,124,.35);background:rgba(67,209,124,.12)}
-</style></head>
+<title>Nova • Reflection</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Look back • Look forward</div></div>
 <div class="card"><h1 class="h1">Reflect for a stronger path</h1>
-<p class="help">Quick reflection helps Nova + Navi tailor the plan. Capture a line or two below.</p>
-<div class="grid cols-2">
-  <div>
-    <label class="small">Look back — what’s been true lately?</label>
-    <textarea id="back" class="note" placeholder="Wins, challenges, lessons..."></textarea>
-  </div>
-  <div>
-    <label class="small">Look forward — what matters next?</label>
-    <textarea id="forward" class="note" placeholder="Goals, constraints, commitments..."></textarea>
-  </div>
-</div>
+<p class="p"><em>Now that your purpose has been revealed, take a moment to reflect.</em> Look back at how far you’ve come — and look forward to the possibilities ahead. The next step is to <strong>invest in yourself</strong> for a better future. Nova and Navi will help you turn clarity into action.</p>
+<p class="small">Your journey doesn’t end here — it’s just beginning.</p>
 <div class="hr"></div>
 <div class="grid cols-2">
-  <button id="next" class="btn primary">Invest in yourself • Plans</button>
-  <button id="skip" class="btn ghost">Skip for now</button>
+  <a class="btn primary" href="plans.html">Invest in Yourself • Plans</a>
+  <a class="btn ghost" href="plans.html">Skip for now</a>
 </div>
-<div id="hint" class="small" style="margin-top:10px;opacity:.9"></div></div><div class="footer-ver">v8.8b • Unified 12-Category Edition</div></div>
-<script>
-(function(){
-  const key='nova.reflection';
-  try{
-    const saved = JSON.parse(localStorage.getItem(key)||'{}');
-    if(saved?.back) document.getElementById('back').value = saved.back;
-    if(saved?.forward) document.getElementById('forward').value = saved.forward;
-  }catch(e){}
-  function persist(){ const payload = {
-    back: document.getElementById('back').value.trim(),
-    forward: document.getElementById('forward').value.trim()
-  }; try{ localStorage.setItem(key, JSON.stringify(payload)); }catch(e){} if(window.NOVA&&NOVA.state){ NOVA.state.reflection = payload; NOVA.save && NOVA.save(); } }
-  document.getElementById('back').addEventListener('input', persist);
-  document.getElementById('forward').addEventListener('input', persist);
-  document.getElementById('next').onclick=()=>{ persist(); location.href='plans.html'; };
-  document.getElementById('skip').onclick=()=>{ location.href='plans.html'; };
-})();
-</script></body></html>
+</div><div class="footer-ver">v8.8d • Refined</div></div></body></html>
